fixes overflow and scrolling problems

--- a/src/components/GuessedWord/GuessedWord.scss
+++ b/src/components/GuessedWord/GuessedWord.scss
@@ -6,7 +6,7 @@
 .guessed-word-container {
     width: 300px;
 
-    margin: 10px auto;
+    margin: 5px auto;
 
     position: relative;
 
