--- a/src/components/TargetWord/TargetWord.scss
+++ b/src/components/TargetWord/TargetWord.scss
@@ -6,7 +6,7 @@
 
     width: 300px;
     height: 75px;
-    margin: auto;
+    margin: 40px auto 0px;
 
     background-color: $tertiary;
     border-radius: 10px;
